<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2.5dp">

    <LinearLayout
        android:id="@+id/booking_LAY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/inflate_sno_txt"
            style="@style/inflate_booking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/s_no" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inflate_req_no_txt"
                style="@style/inflate_booking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_no" />

            <TextView
                android:id="@+id/inflate_ship_to_txt"
                style="@style/inflate_booking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ship_to"
                android:layout_marginTop="-5dp"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/inflate_date_txt"
            style="@style/inflate_booking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date" />

        <TextView
            android:id="@+id/inflate_total_qty_txt"
            style="@style/inflate_booking"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|end"
            android:text="@string/total_qty" />

    </LinearLayout>

</android.support.v7.widget.CardView>