<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2.5dp">

    <LinearLayout
        android:id="@+id/booking_LAY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/inflate_sno_txt"
            style="@style/inflate_booking_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/s_no" />

        <TextView
            android:id="@+id/inflate_model_txt"
            style="@style/inflate_booking_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="left"
            android:textSize="10sp"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/model_name" />

        <TextView
            android:id="@+id/inflate_qty_txt"
            style="@style/inflate_booking_detail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/total_qty" />

    </LinearLayout>

</android.support.v7.widget.CardView>