<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white">

    <LinearLayout
        android:id="@+id/toolbar_Lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/elevation_appBarLayout"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:visibility="visible"
            app:elevation="@dimen/elevation_appBarLayout">

            <android.support.v7.widget.Toolbar
                android:id="@+id/fragment_cart_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_start"
                app:titleTextColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/cart_back_image"
                        android:layout_width="@dimen/toolbar_Imageview_width_height"
                        android:layout_height="@dimen/toolbar_Imageview_width_height"
                        android:layout_gravity="center"
                        android:padding="@dimen/toolbar_padding"
                        android:src="@drawable/ic_action_back_arrow" />

                    <TextView
                        android:id="@+id/cart_toolbar_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/toolbar_padding"
                        android:textAllCaps="true"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_Lay"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/show_hide_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/magrin5"
            app:cardCornerRadius="@dimen/magrin5"
            app:cardElevation="@dimen/magrin5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padd_10"
                android:weightSum="1">

                <com.angler.ti_customer.utils.TPITextView
                    android:id="@+id/tpitextView"
                    android:layout_width="@dimen/layout_width_zero_OrderSummary"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.8"
                    android:gravity="center"
                    android:text="@string/show_booking_details"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/magrin16"
                    android:textStyle="bold"
                    app:fonts="@string/font_opensans_bold" />

                <ImageView
                    android:id="@+id/booking_arrow"
                    android:layout_width="@dimen/layout_width_zero_OrderSummary"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_down"
                    android:tag="down"
                    android:tint="@color/colorAccent"
                    android:visibility="visible" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/fragment_booking_detail_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/magrin5"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/magrin5"
            app:cardElevation="@dimen/magrin5">


            <LinearLayout
                android:id="@+id/layout_address_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/magrin5"
                android:layout_marginRight="@dimen/magrin5"
                android:orientation="vertical"
                android:paddingBottom="@dimen/magrin5"
                android:paddingTop="@dimen/magrin5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/magrin3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.angler.ti_customer.utils.TPITextView
                        style="@style/fragment_booking_detail_subtitle"
                        android:text="@string/request_no"
                        app:fonts="@string/font_opensans_semibold" />

                    <com.angler.ti_customer.utils.TPITextView
                        android:id="@+id/inflate_req_no_txt"
                        style="@style/fragment_booking_detail_data" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/magrin3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.angler.ti_customer.utils.TPITextView
                        style="@style/fragment_booking_detail_subtitle"
                        android:text="@string/date"
                        app:fonts="@string/font_opensans_semibold" />

                    <com.angler.ti_customer.utils.TPITextView
                        android:id="@+id/inflate_date_txt"
                        style="@style/fragment_booking_detail_data" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="@dimen/magrin3"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.angler.ti_customer.utils.TPITextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.73"
                        android:gravity="start"
                        android:text="@string/shipping_address"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        app:fonts="@string/font_opensans_semibold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.1"
                        android:gravity="center"
                        android:text=":"
                        android:layout_marginLeft="@dimen/magrin5"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <com.angler.ti_customer.utils.TPITextView
                        android:id="@+id/inflate_ship_address_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/magrin5"
                        android:layout_weight="1.2"
                        android:gravity="start"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/magrin3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.angler.ti_customer.utils.TPITextView
                        style="@style/fragment_booking_detail_subtitle"
                        android:text="@string/ship_to"
                        app:fonts="@string/font_opensans_semibold" />

                    <com.angler.ti_customer.utils.TPITextView
                        android:id="@+id/inflate_ship_to_txt"
                        style="@style/fragment_booking_detail_data" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/magrin3"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.angler.ti_customer.utils.TPITextView
                        style="@style/fragment_booking_detail_subtitle"
                        android:text="@string/total_qty"
                        app:fonts="@string/font_opensans_semibold" />

                    <com.angler.ti_customer.utils.TPITextView
                        android:id="@+id/inflate_total_qty_txt"
                        style="@style/fragment_booking_detail_data" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/no_data_found"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/no_history_avilable"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/magrin5"
            android:visibility="visible"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="@dimen/magrin5"
            app:cardElevation="@dimen/magrin5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.angler.ti_customer.utils.TPITextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:padding="@dimen/magrin5"
                    android:text="@string/s_no"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:fonts="@string/font_opensans_bold" />

                <com.angler.ti_customer.utils.TPITextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:padding="@dimen/magrin5"
                    android:text="@string/model_name"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:fonts="@string/font_opensans_bold" />

                <com.angler.ti_customer.utils.TPITextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/magrin5"
                    android:text="@string/qty"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:fonts="@string/font_opensans_bold" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/fragment_nodata_found"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data_found"
            android:textColor="@color/dark_oriange"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_booking_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="2.5dp" />

    </LinearLayout>

</RelativeLayout>