<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context="com.angler.ti_customer.activities.TPI_Login_screen">

    <RelativeLayout
        android:id="@+id/activity_register_main_LAY"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/login_image_width"
                android:layout_height="@dimen/login_image_height"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:src="@drawable/ic_logo_white" />

            <TextView
                android:id="@+id/layout_tel_header_TXT_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/layout_tel_header_TXT_version_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <!--  Email Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:theme="@style/appCompactEditText">

                    <EditText
                        android:id="@+id/activity_login_EDT_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_username"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/light_grey"

                        />
                </android.support.design.widget.TextInputLayout>

                <!--  Password Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:theme="@style/appCompactEditText">

                    <EditText
                        android:id="@+id/activity_login_EDT_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/light_grey" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/rememberMe_XML_CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="@string/label_CheckBox_RememberMe"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/testTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <com.andexert.library.RippleView
                android:id="@+id/activity_register_RPLV_submit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:rv_color="@color/light_gray"
                app:rv_rippleDuration="200"
                app:rv_type="rectangle"
                app:rv_zoom="true">

                <Button
                    android:id="@+id/activity_register_BTN_submit"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_corner_next_btn"
                    android:text="@string/label_login"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/login_button_text_size"
                    android:textStyle="bold" />
            </com.andexert.library.RippleView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_register_LAY_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:minHeight="50dp"
            android:orientation="vertical"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/activity_common_LAY_inflate_no_permission"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <include
                android:id="@+id/activity_main_FRG_no_permission"
                layout="@layout/layout_inflate_no_permission" />

        </LinearLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
